--- a/SERVER/web/course.ejs
+++ b/SERVER/web/course.ejs
@@ -151,8 +151,9 @@
 				</div>
 			</nav>
 			<div class="row" style="margin-top: 30px; padding-top: 50px;">
+			
 				<div class="col-xs-12" style="text-align: center;" align="middle">
-					<h1><%= title.toUpperCase() %></h1>
+					<h1><%= title.toUpperCase() %></h1><h4 style="color: gray;"><%= title2.replace("amp;", "") %></h4>
 					<h5>GPA: <%= avg_gpa %></h5>
 				</div>
 				<div style="text-align: center;" class='<% if(A+B+C+D+F > 0) {%>col-xs-12<%}else{%>hidden-xs hidden-sm<%}%> col-md-6' align="middle">
@@ -197,7 +198,6 @@
 						</tr>
 						</thead>
 						<tbody>
-						
 						<% result.forEach(function(each) { 
 							var classize = each.A + each.B + each.C + each.D + each.F + each.W + each.V + each.I + each.S + each.U;
 							var total = each.A + each.B + each.C + each.D + each.F;
@@ -215,7 +215,7 @@
 							for(var i=0; i < 4;i++) {
 								term += each.term[i];
 							}
-							if(each.A + each.B + each.C + each.D + each.F + each.W == 0) {
+							if(each.A + each.B + each.C + each.D + each.F + each.S + each.U + each.W == 0) {
 								
 							} else {
 								var gpa = each.A * 4 + each.B * 3 + each.C * 2 + each.D * 1 + each.F * 0;
